# gridlock-astram-foresight

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: app.py
data/processed/: breakdown_by_corridor.parquet  breakdown_hotspots.parquet  clearance_median_by_cause.parquet  clearance_median_by_cause_corridor.parquet  corridor_risk.parquet  events_clean.parquet  text_signals.parquet  venue_recurrence.parquet
models/: model_clearance_band.joblib  model_closure.joblib  model_nlp_cause.joblib
reports/: impact_metrics.json  nlp_metrics.json  preprocess_summary.json
src/: config.py  inference.py  nlp_severity.py  preprocess.py  train_impact.py  train_nlp.py
tests/: smoke_test.py
